flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2  # Set the desired number of replicas
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: shettyniti/flask-todo-app:latest  # Image from Docker Hub
          ports:
            - containerPort: 5000
