mongo-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  containers:
    - name: mongo
      image: mongo:latest
      ports:
        - containerPort: 27017
      volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
  volumes:
    - name: mongo-storage
      emptyDir: {}
