flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: NodePort  # Exposes the service externally
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007  # Use any available NodePort in the range (30000-32767)
